--- a/tests-coverage/Handler/dashboard.html
+++ b/tests-coverage/Handler/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for C:\xampp\htdocs\todolist_project_v13\src\Controller</title>
+  <title>Dashboard for C:\xampp\htdocs\todolist_project_v13\src\Handler</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">C:\xampp\htdocs\todolist_project_v13\src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Controller</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Handler</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -111,7 +111,6 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="TaskController.php.html#205"><abbr title="App\Controller\TaskController::toggleTaskAction">toggleTaskAction</abbr></a></td><td class="text-right">87%</td></tr>
 
        </tbody>
       </table>
@@ -128,7 +127,6 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="TaskController.php.html#205"><abbr title="App\Controller\TaskController::toggleTaskAction">toggleTaskAction</abbr></a></td><td class="text-right">2</td></tr>
 
        </tbody>
       </table>
@@ -157,7 +155,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,1,3], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,1], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -175,7 +173,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,1,0,13], "Method Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,1], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -225,7 +223,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"DefaultController.php.html#17\">App\\Controller\\DefaultController<\/a>"],[100,1,"<a href=\"SecurityController.php.html#12\">App\\Controller\\SecurityController<\/a>"],[98.46153846153847,17,"<a href=\"TaskController.php.html#25\">App\\Controller\\TaskController<\/a>"],[100,13,"<a href=\"UserController.php.html#28\">App\\Controller\\UserController<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[100,3,"<a href=\"PagingHandler.php.html#7\">App\\Handler\\PagingHandler<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -249,7 +247,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"DefaultController.php.html#23\">App\\Controller\\DefaultController::indexAction<\/a>"],[100,1,"<a href=\"SecurityController.php.html#18\">App\\Controller\\SecurityController::loginAction<\/a>"],[100,1,"<a href=\"TaskController.php.html#52\">App\\Controller\\TaskController::__construct<\/a>"],[100,3,"<a href=\"TaskController.php.html#71\">App\\Controller\\TaskController::listAction<\/a>"],[100,3,"<a href=\"TaskController.php.html#102\">App\\Controller\\TaskController::listDone<\/a>"],[100,3,"<a href=\"TaskController.php.html#129\">App\\Controller\\TaskController::createAction<\/a>"],[100,3,"<a href=\"TaskController.php.html#166\">App\\Controller\\TaskController::editAction<\/a>"],[87.5,2,"<a href=\"TaskController.php.html#205\">App\\Controller\\TaskController::toggleTaskAction<\/a>"],[100,2,"<a href=\"TaskController.php.html#237\">App\\Controller\\TaskController::deleteTaskAction<\/a>"],[100,1,"<a href=\"UserController.php.html#60\">App\\Controller\\UserController::__construct<\/a>"],[100,3,"<a href=\"UserController.php.html#81\">App\\Controller\\UserController::listAction<\/a>"],[100,3,"<a href=\"UserController.php.html#110\">App\\Controller\\UserController::createAction<\/a>"],[100,4,"<a href=\"UserController.php.html#148\">App\\Controller\\UserController::editAction<\/a>"],[100,2,"<a href=\"UserController.php.html#211\">App\\Controller\\UserController::deleteAction<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,3,"<a href=\"PagingHandler.php.html#10\">App\\Handler\\PagingHandler::handle<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
