--- a/tests-coverage/Security/dashboard.html
+++ b/tests-coverage/Security/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for C:\xampp\htdocs\todolist_project_v13\src\Controller</title>
+  <title>Dashboard for C:\xampp\htdocs\todolist_project_v13\src\Security</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">C:\xampp\htdocs\todolist_project_v13\src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Controller</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Security</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,6 +58,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="Voter/TaskVoter.php.html#12">App\Security\Voter\TaskVoter</a></td><td class="text-right">84%</td></tr>
 
        </tbody>
       </table>
@@ -74,6 +75,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="Voter/TaskVoter.php.html#12">App\Security\Voter\TaskVoter</a></td><td class="text-right">10</td></tr>
 
        </tbody>
       </table>
@@ -111,7 +113,9 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="TaskController.php.html#205"><abbr title="App\Controller\TaskController::toggleTaskAction">toggleTaskAction</abbr></a></td><td class="text-right">87%</td></tr>
+       <tr><td><a href="Voter/TaskVoter.php.html#41"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">71%</td></tr>
+       <tr><td><a href="Voter/UserVoter.php.html#42"><abbr title="App\Security\Voter\UserVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">77%</td></tr>
+       <tr><td><a href="Voter/TaskVoter.php.html#62"><abbr title="App\Security\Voter\TaskVoter::canDelete">canDelete</abbr></a></td><td class="text-right">80%</td></tr>
 
        </tbody>
       </table>
@@ -128,7 +132,9 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="TaskController.php.html#205"><abbr title="App\Controller\TaskController::toggleTaskAction">toggleTaskAction</abbr></a></td><td class="text-right">2</td></tr>
+       <tr><td><a href="Voter/UserVoter.php.html#42"><abbr title="App\Security\Voter\UserVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">4</td></tr>
+       <tr><td><a href="Voter/TaskVoter.php.html#41"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">3</td></tr>
+       <tr><td><a href="Voter/TaskVoter.php.html#62"><abbr title="App\Security\Voter\TaskVoter::canDelete">canDelete</abbr></a></td><td class="text-right">3</td></tr>
 
        </tbody>
       </table>
@@ -157,7 +163,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,1,3], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,1,1,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -175,7 +181,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,1,0,13], "Method Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,2,1,0,5], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -225,7 +231,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"DefaultController.php.html#17\">App\\Controller\\DefaultController<\/a>"],[100,1,"<a href=\"SecurityController.php.html#12\">App\\Controller\\SecurityController<\/a>"],[98.46153846153847,17,"<a href=\"TaskController.php.html#25\">App\\Controller\\TaskController<\/a>"],[100,13,"<a href=\"UserController.php.html#28\">App\\Controller\\UserController<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[84.21052631578947,10,"<a href=\"Voter\/TaskVoter.php.html#12\">App\\Security\\Voter\\TaskVoter<\/a>"],[90.47619047619048,14,"<a href=\"Voter\/UserVoter.php.html#11\">App\\Security\\Voter\\UserVoter<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -249,7 +255,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"DefaultController.php.html#23\">App\\Controller\\DefaultController::indexAction<\/a>"],[100,1,"<a href=\"SecurityController.php.html#18\">App\\Controller\\SecurityController::loginAction<\/a>"],[100,1,"<a href=\"TaskController.php.html#52\">App\\Controller\\TaskController::__construct<\/a>"],[100,3,"<a href=\"TaskController.php.html#71\">App\\Controller\\TaskController::listAction<\/a>"],[100,3,"<a href=\"TaskController.php.html#102\">App\\Controller\\TaskController::listDone<\/a>"],[100,3,"<a href=\"TaskController.php.html#129\">App\\Controller\\TaskController::createAction<\/a>"],[100,3,"<a href=\"TaskController.php.html#166\">App\\Controller\\TaskController::editAction<\/a>"],[87.5,2,"<a href=\"TaskController.php.html#205\">App\\Controller\\TaskController::toggleTaskAction<\/a>"],[100,2,"<a href=\"TaskController.php.html#237\">App\\Controller\\TaskController::deleteTaskAction<\/a>"],[100,1,"<a href=\"UserController.php.html#60\">App\\Controller\\UserController::__construct<\/a>"],[100,3,"<a href=\"UserController.php.html#81\">App\\Controller\\UserController::listAction<\/a>"],[100,3,"<a href=\"UserController.php.html#110\">App\\Controller\\UserController::createAction<\/a>"],[100,4,"<a href=\"UserController.php.html#148\">App\\Controller\\UserController::editAction<\/a>"],[100,2,"<a href=\"UserController.php.html#211\">App\\Controller\\UserController::deleteAction<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,1,"<a href=\"Voter\/TaskVoter.php.html#21\">App\\Security\\Voter\\TaskVoter::__construct<\/a>"],[100,3,"<a href=\"Voter\/TaskVoter.php.html#26\">App\\Security\\Voter\\TaskVoter::supports<\/a>"],[71.42857142857143,3,"<a href=\"Voter\/TaskVoter.php.html#41\">App\\Security\\Voter\\TaskVoter::voteOnAttribute<\/a>"],[80,3,"<a href=\"Voter\/TaskVoter.php.html#62\">App\\Security\\Voter\\TaskVoter::canDelete<\/a>"],[100,1,"<a href=\"Voter\/UserVoter.php.html#22\">App\\Security\\Voter\\UserVoter::__construct<\/a>"],[100,3,"<a href=\"Voter\/UserVoter.php.html#27\">App\\Security\\Voter\\UserVoter::supports<\/a>"],[77.77777777777779,4,"<a href=\"Voter\/UserVoter.php.html#42\">App\\Security\\Voter\\UserVoter::voteOnAttribute<\/a>"],[100,6,"<a href=\"Voter\/UserVoter.php.html#67\">App\\Security\\Voter\\UserVoter::checkAuthorization<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
